--- a/Day_6_DataCleaning_Remove_outerLayer.ipynb
+++ b/Day_6_DataCleaning_Remove_outerLayer.ipynb
@@ -851,11 +851,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1b058999-d4f2-4e73-a8d7-8b7c3bd1c68e",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-40000.0)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lower=q1-(1.5*IQR)\n",
+    "lower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0f381916-3f0d-440c-b130-eb3c5153acbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  20000,   30000,   50000, 1500000,   70000,   90000])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c2f8b59e-afbe-42aa-8d10-81fe89b06ebd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.int64(1500000)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v=[]\n",
+    "for i in a:\n",
+    "    if i>upper or i<lower:\n",
+    "        v.append(i)\n",
+    "print(v)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "22c636ac-1bd6-4b2b-9c64-aa2d7d893510",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.int64(20000), np.int64(30000), np.int64(50000), np.int64(70000), np.int64(90000)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v2=[]\n",
+    "for i in a:\n",
+    "    if i>lower and i<upper:\n",
+    "        v2.append(i)\n",
+    "print(v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "acfbef97-7b3b-4fde-aeb7-6e296652059c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(52000)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statistics as st\n",
+    "b=st.mean(v2)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90a83485-6b66-402c-8eef-d0cbacabda43",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a.fillna()"
+   ]
   }
  ],
  "metadata": {
