--- a/Pandas_Questions_Solving.ipynb
+++ b/Pandas_Questions_Solving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "06677e8a-a531-4420-96a4-ea79cd609e8e",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "4        5  Abhishek     10     55       60       58     62    235       58.75"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "34d91c26-88f1-4532-a7b8-61b9d9263259",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "4       58.75     D  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "050e74ee-b2ef-4c7f-9aaa-868111ff3a66",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "4       58.75     D     5  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "34c18050-eef9-45fa-b5a2-edc67856d2bc",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1173,7 @@
        "49   47  Female  Bangalore          121752  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "56891496-3f78-42df-9e52-4910eda7ace6",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1197,7 @@
        "np.int64(50)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7ae3dccc-2cc5-4d83-b22b-01b205b1bb16",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1218,7 @@
        "5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b197cb76-3ae7-49af-9c7a-cd1c82425530",
    "metadata": {},
    "outputs": [
@@ -1417,7 +1417,7 @@
        "36    Male    Chennai           81491  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "97b53f35-2af1-439b-b2fa-5de5bb813eed",
    "metadata": {},
    "outputs": [
@@ -1853,7 +1853,7 @@
        "49   47  Female  Bangalore          121752  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f0345d40-17fb-4fb7-801c-9edcfe570098",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1874,7 @@
        "np.int64(15)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1886,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a4707dc8-a469-414b-8d86-47aa569d061a",
    "metadata": {},
    "outputs": [
@@ -1896,7 +1896,7 @@
        "np.float64(39.76)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7789d668-f359-4538-a5c0-aed93af918ea",
    "metadata": {},
    "outputs": [
@@ -1926,7 +1926,7 @@
        "Name: 37, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1938,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "6b869337-d3ca-467d-b8d3-8a25186a2ffc",
    "metadata": {},
    "outputs": [
@@ -1957,7 +1957,7 @@
        "Name: 48, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "1dc2d9c1-128f-4935-9760-5af08029cf80",
    "metadata": {},
    "outputs": [
@@ -2281,7 +2281,7 @@
        "46   22  Female      Delhi           58828  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b324fe8f-afee-4177-8db7-402228da6abc",
    "metadata": {},
    "outputs": [
@@ -2302,7 +2302,7 @@
        "np.float64(67261.9)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2314,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "1d7139e3-aab3-41d8-9123-0d3f26e544ae",
    "metadata": {},
    "outputs": [
@@ -2341,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "00786c9e-3133-4500-b1eb-80df5094a6fe",
    "metadata": {},
    "outputs": [
@@ -2369,7 +2369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "6e632584-c844-495a-aaaa-89f4788527c4",
    "metadata": {},
    "outputs": [
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "a23bf4f6-7e50-42ca-9510-a3a5f197e054",
    "metadata": {},
    "outputs": [
@@ -2444,7 +2444,7 @@
        "Name: Monthly_Salary, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2455,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "95c6b447-0fc5-4748-8f93-a5c39e13a15f",
    "metadata": {},
    "outputs": [
@@ -2465,7 +2465,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2486,7 +2486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "97d6f4bc-935d-48f0-bee9-77c68728a03c",
    "metadata": {},
    "outputs": [
@@ -2561,7 +2561,7 @@
        "33  Female      Delhi          134616  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2574,7 +2574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "8079be0f-4efe-4648-b8eb-82367d285749",
    "metadata": {},
    "outputs": [
@@ -2589,7 +2589,7 @@
        "Name: EmployeeID, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2600,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "74868fcd-d138-4f20-8e69-b96d5000c404",
    "metadata": {},
    "outputs": [
@@ -2717,7 +2717,7 @@
        "4    36  Female      Delhi          132450  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2728,17 +2728,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "8c20b4ca-cf1b-449b-8813-cb9b7e9c1cc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001AE7230FC50>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000002B64B393C50>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2752,7 +2752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "369a4986-5c13-4a32-b952-63c2a914e979",
    "metadata": {},
    "outputs": [
@@ -2762,7 +2762,7 @@
        "np.float64(82252.64285714286)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2773,7 +2773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "29551609-eabe-4376-94ac-8ebf464164f7",
    "metadata": {},
    "outputs": [
@@ -2784,7 +2784,7 @@
        "Name: Operations, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2800,7 +2800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "ce90d35a-1fca-4932-8c75-bd169897582c",
    "metadata": {},
    "outputs": [
@@ -2816,7 +2816,7 @@
        "Name: Monthly_Salary, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2827,7 +2827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "a172bb24-7f7f-4c9e-8a23-245a9b0eea71",
    "metadata": {},
    "outputs": [
@@ -2843,7 +2843,7 @@
        "Name: Monthly_Salary, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2854,7 +2854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "e1f77174-44d8-4bf2-a936-56987ce79ff1",
    "metadata": {},
    "outputs": [
@@ -2864,7 +2864,7 @@
        "np.float64(0.07422086183046225)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2875,7 +2875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "e530fde5-8766-442f-85b1-d3c63622902f",
    "metadata": {},
    "outputs": [
@@ -2885,7 +2885,7 @@
        "np.float64(72944.1)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2896,7 +2896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "424c366e-d8cb-4d3b-bf85-e4e339347794",
    "metadata": {},
    "outputs": [
@@ -2906,7 +2906,7 @@
        "np.float64(82441.77777777778)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2917,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "f3bb538b-5621-48e2-9172-7ebe2f2c3c7f",
    "metadata": {},
    "outputs": [
@@ -2938,7 +2938,7 @@
        "Name: Monthly_Salary, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2949,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "3e01a4f1-c779-4168-a60e-8275c1a78461",
    "metadata": {},
    "outputs": [
@@ -3066,7 +3066,7 @@
        "9    28    Male     Mumbai           31893  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3077,7 +3077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "ea7fc4b8-5387-4627-8154-d1622f045d71",
    "metadata": {},
    "outputs": [
@@ -3097,7 +3097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "765ec53c-a3df-48cf-8ce4-6a7f12f5f560",
    "metadata": {},
    "outputs": [
@@ -3107,7 +3107,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3128,7 +3128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "a2208488-47e2-4506-b0d8-b68a8ad1d29e",
    "metadata": {},
    "outputs": [
@@ -3875,7 +3875,7 @@
        "49   47  Female  Bangalore          121752  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3899,7 +3899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 36,
    "id": "2510f928-7a68-43c9-9cbf-452cf78c7105",
    "metadata": {},
    "outputs": [
@@ -3915,11 +3915,10 @@
        "Gender                     Male\n",
        "City                     Mumbai\n",
        "Monthly_Salary           149123\n",
-       "Salary_Category            High\n",
        "Name: 37, dtype: object"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3930,7 +3929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 37,
    "id": "2feeefb9-0d58-46fb-8045-bdd621e1aac7",
    "metadata": {},
    "outputs": [
@@ -3944,7 +3943,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3956,7 +3955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 38,
    "id": "85ca37b0-605e-4b4e-860a-438c0eb0dcfc",
    "metadata": {},
    "outputs": [
@@ -3971,7 +3970,7 @@
        "Name: Monthly_Salary, dtype: float64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3982,7 +3981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 39,
    "id": "ee85d782-b626-453e-a069-6c689c913f95",
    "metadata": {},
    "outputs": [
@@ -3997,7 +3996,7 @@
        "Name: Monthly_Salary, dtype: float64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4008,7 +4007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 40,
    "id": "126b968c-6165-4ac7-95e8-39ef009aa4e7",
    "metadata": {},
    "outputs": [
@@ -4024,7 +4023,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4035,7 +4034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 41,
    "id": "cca131cd-882e-4cbe-af2f-0c1b33627ce8",
    "metadata": {},
    "outputs": [
@@ -4116,7 +4115,7 @@
        "HR                  7      580616  82945.142857"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4127,7 +4126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 42,
    "id": "0823831b-b617-4708-bd15-e9e261ecd6a1",
    "metadata": {},
    "outputs": [
@@ -4137,7 +4136,7 @@
        "np.float64(0.047658998112982104)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4151,7 +4150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 43,
    "id": "981f3c75-4778-44ee-86c7-03080fae0754",
    "metadata": {},
    "outputs": [
@@ -4167,7 +4166,7 @@
        "Name: Monthly_Salary, dtype: float64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4179,7 +4178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 44,
    "id": "4fa3d2b1-b4c4-4d83-8469-ee2870638eee",
    "metadata": {},
    "outputs": [
@@ -4195,7 +4194,7 @@
        "Name: Monthly_Salary, dtype: float64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4207,7 +4206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "facf2133-4be5-4009-9f3b-91966a766224",
+   "id": "3b6179c0-3d7c-4ce6-af79-ec63f096093b",
    "metadata": {},
    "outputs": [],
    "source": []
