--- a/ day_6_Matplotlib/Untitled.ipynb
+++ b/ day_6_Matplotlib/Untitled.ipynb
@@ -2246,15 +2246,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "f43d375a-ba61-4eb1-a2b1-2432a583141b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1536, 3097, 3004, 1505]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s=n['Points']\n",
-    "t2=list(t)\n",
-    "t2"
+    "s2=list(s)\n",
+    "s2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f589fd7a-5007-48ec-9cc0-b2c1ef7bd550",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'k' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[43]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m plt.figure(figsize=(\u001b[32m15\u001b[39m,\u001b[32m3\u001b[39m))\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m plt.barh(t2,s2,color=\u001b[43mk\u001b[49m)\n\u001b[32m      3\u001b[39m plt.xlabel(\u001b[33m'\u001b[39m\u001b[33mTeam\u001b[39m\u001b[33m'\u001b[39m,size=\u001b[32m20\u001b[39m,color=\u001b[33m'\u001b[39m\u001b[33mred\u001b[39m\u001b[33m'\u001b[39m,fontweight=\u001b[33m'\u001b[39m\u001b[33mbold\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      4\u001b[39m plt.ylabel(\u001b[33m'\u001b[39m\u001b[33mPoints\u001b[39m\u001b[33m'\u001b[39m,size=\u001b[32m20\u001b[39m,color=\u001b[33m'\u001b[39m\u001b[33mred\u001b[39m\u001b[33m'\u001b[39m,fontweight=\u001b[33m'\u001b[39m\u001b[33mbold\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'k' is not defined"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1500x300 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.figure(figsize=(15,3))\n",
+    "plt.barh(t2,s2,color=k)\n",
+    "plt.xlabel('Team',size=20,color='red',fontweight='bold')\n",
+    "plt.ylabel('Points',size=20,color='red',fontweight='bold')\n",
+    "plt.xticks(rotation=30,size=12,color='green')\n",
+    "plt.yticks(rotation=30,size=12,color='green')\n",
+    "plt.title('Team Records Report',size=20,color='red',fontweight='bold')\n",
+    "\n",
+    "for index,value in enumerate(s2):\n",
+    "    plt.text(value,index,str(value))\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c639d984-31b8-4e55-adc6-cafaef006664",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
