--- a/Pandas_Questions_Solving.ipynb
+++ b/Pandas_Questions_Solving.ipynb
@@ -2735,7 +2735,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000002B64B393C50>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000013E8D5C7C50>"
       ]
      },
      "execution_count": 23,
@@ -4205,8 +4205,393 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "id": "c8533468-08ea-4b2a-9bfd-310ecaa0ceaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Riders</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Riders</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Devils</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Devils</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kings</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Kings</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Kings</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Kings</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Riders</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Royals</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Royals</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Royals</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>690</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Team  Rank  Year  Points\n",
+       "0   Riders     1  2014     876\n",
+       "1   Riders     2  2015     789\n",
+       "2   Devils     2  2014     863\n",
+       "3   Devils     3  2015     673\n",
+       "4    Kings     3  2014     741\n",
+       "5    Kings     4  2015     812\n",
+       "6    Kings     1  2016     756\n",
+       "7    Kings     1  2017     788\n",
+       "8   Riders     2  2016     694\n",
+       "9   Royals     4  2014     701\n",
+       "10  Royals     1  2015     884\n",
+       "11  Royals     2  2017     690"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2= {'Team':['Riders','Riders','Devils','Devils','Kings','Kings','Kings','Kings','Riders','Royals','Royals','Royals'],\n",
+    "            'Rank':[1,2,2,3,3,4,1,1,2,4,1,2],\n",
+    "            'Year':[2014,2015,2014,2015,2014,2015,2016,2017,2016,2014,2015,2017],\n",
+    "            'Points':[876,789,863,673,741,812,756,788,694,701,884,690],\n",
+    "            \n",
+    "           }\n",
+    "df=pd.DataFrame(df2)\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "9037e902-faf0-47b1-b196-fcfc0fa24816",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Team</th>\n",
+       "      <th>Devils</th>\n",
+       "      <th>Kings</th>\n",
+       "      <th>Riders</th>\n",
+       "      <th>Royals</th>\n",
+       "      <th>All</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>863.0</td>\n",
+       "      <td>741.00</td>\n",
+       "      <td>876.000000</td>\n",
+       "      <td>701.000000</td>\n",
+       "      <td>795.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>673.0</td>\n",
+       "      <td>812.00</td>\n",
+       "      <td>789.000000</td>\n",
+       "      <td>884.000000</td>\n",
+       "      <td>789.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>756.00</td>\n",
+       "      <td>694.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>725.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>788.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>690.000000</td>\n",
+       "      <td>739.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>All</th>\n",
+       "      <td>768.0</td>\n",
+       "      <td>774.25</td>\n",
+       "      <td>786.333333</td>\n",
+       "      <td>758.333333</td>\n",
+       "      <td>772.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Team  Devils   Kings      Riders      Royals     All\n",
+       "Year                                                \n",
+       "2014   863.0  741.00  876.000000  701.000000  795.25\n",
+       "2015   673.0  812.00  789.000000  884.000000  789.50\n",
+       "2016     0.0  756.00  694.000000    0.000000  725.00\n",
+       "2017     0.0  788.00    0.000000  690.000000  739.00\n",
+       "All    768.0  774.25  786.333333  758.333333  772.25"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Q1. Har team ka year-wise average points nikaalo aur batao kaunsi team me sabse zyada consistency hai.\n",
+    "df.pivot_table(\n",
+    "    index='Year',\n",
+    "    columns='Team',\n",
+    "    values='Points',\n",
+    "    aggfunc='mean',\n",
+    "    fill_value=0,\n",
+    "    margins=True\n",
+    "    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "fce7a62c-1fa2-4918-b5d7-97f2d61f3da8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Team\n",
+       "Kings     2\n",
+       "Riders    1\n",
+       "Royals    1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Rank']==1]['Team'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "025bf640-489f-49f4-b87f-2152e58a190a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Riders</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Royals</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Kings</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Kings</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>788</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Team  Rank  Year  Points\n",
+       "0   Riders     1  2014     876\n",
+       "10  Royals     1  2015     884\n",
+       "6    Kings     1  2016     756\n",
+       "7    Kings     1  2017     788"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df.groupby('Year')['Points'].idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3b6179c0-3d7c-4ce6-af79-ec63f096093b",
+   "id": "63d48d64-f2c0-42fd-8b97-cef886a05302",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "636fd612-b6cb-48f0-8454-fcd55f1260b2",
    "metadata": {},
    "outputs": [],
    "source": []
