--- a/Pandas_Question_Solving Team score data.ipynb
+++ b/Pandas_Question_Solving Team score data.ipynb
@@ -668,35 +668,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "05b3269e-4b51-4086-ba10-c8ed271b8215",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Year</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>Improvement</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Team</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Devils</th>\n",
+       "      <td>863</td>\n",
+       "      <td>673</td>\n",
+       "      <td>-190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kings</th>\n",
+       "      <td>741</td>\n",
+       "      <td>812</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Riders</th>\n",
+       "      <td>876</td>\n",
+       "      <td>789</td>\n",
+       "      <td>-87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Royals</th>\n",
+       "      <td>701</td>\n",
+       "      <td>884</td>\n",
+       "      <td>183</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Team\n",
-       "Devils   -190\n",
-       "Kings      71\n",
-       "Riders    -87\n",
-       "Royals    183\n",
-       "dtype: int64"
+       "Year    2014  2015  Improvement\n",
+       "Team                           \n",
+       "Devils   863   673         -190\n",
+       "Kings    741   812           71\n",
+       "Riders   876   789          -87\n",
+       "Royals   701   884          183"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pivot['Improvement']=pivot[2015]-pivot[2014]\n",
-    "Improvement"
+    "pivot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "1d26d0a4-1261-4624-aeb7-e225c92eca06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Royals'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivot['Improvement'].idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "aa1710a4-8036-43d7-ae05-a202192dcc0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Team\n",
+       "Kings     2\n",
+       "Riders    1\n",
+       "Royals    1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Q6. jo kam se kam 2 alag-alag years me Rank 1 par rahi ho.\n",
+    "df[df['Rank']==1]['Team'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d26d0a4-1261-4624-aeb7-e225c92eca06",
+   "id": "7d49d11e-e544-4ba2-ac8c-01a7c08989fc",
    "metadata": {},
    "outputs": [],
    "source": []
